--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card text-center">
 						<div class="card-body">
-							<img alt="" class="img-fluid rounded-circle" src="../project-1-img/team-2.jpg">
+							<img alt="" class="img-fluid rounded-circle" src="./project-1-img/team-2.jpg">
 							<h3 class="card-title py-2">Jack Wilson</h3>
 							<p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi ipsam nostrum illo tempora esse quibusdam.</p>
 							<p class="socials"><i class="bi bi-twitter text-dark mx-1"></i> <i class="bi bi-facebook text-dark mx-1"></i> <i class="bi bi-linkedin text-dark mx-1"></i> <i class="bi bi-instagram text-dark mx-1"></i></p>
